test/tests/operators/every/bytes_output.txt
error: subpipeline must not produce bytes
 --> tests/operators/every/bytes_output.tql:5:10
  |
5 | every 1s {
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
